--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -1,17 +1,18 @@
 @import "colors";
+@import "sizes";
 
 .app-button {
   width: 100%;
   height: 100%;
-  min-width: 6rem;
-  min-height: 3rem;
+  min-width: $button_min_with;
+  min-height: $button_min_height;
 
   background-color: $primary-button-color;
   color: $primary-background-color;
 
   outline: 0;
   border: none;
-  border-radius: 0.5rem;
+  border-radius: $small-radius;
 
   font-weight: 700;
 
