Added text input component

--- a/src/assets/styles/sizes.scss
+++ b/src/assets/styles/sizes.scss
@@ -3,6 +3,7 @@ $button-min-height: 3rem;
 $button-min-with: 6rem;
 
 // Spaces
+$extra-extra-small-space: 0.25rem;
 $extra-small-space: 0.5rem;
 $small-space: 1rem;
 $medium-space: 2rem;
@@ -19,3 +20,6 @@ $medium-border: 2px;
 // Font size
 $font-default: 16px;
 $font-large: 1.25rem;
+
+// Inputs
+$input-height: 3rem;
