--- a/src/assets/styles/sizes.scss
+++ b/src/assets/styles/sizes.scss
@@ -1,3 +1,8 @@
+// Cards
+$card-min-width: 12rem;
+$card-max-width: 67.5rem;
+$card-title-height: 4rem;
+
 // Buttons
 $button-min-height: 3rem;
 $button-min-with: 6rem;
