Added right margin to card component

--- a/src/app/shared/components/card/card.component.scss
+++ b/src/app/shared/components/card/card.component.scss
@@ -23,7 +23,7 @@
   background-color: $primary-border-color;
 
   .app-card-title {
-    margin-left: $small_space;
+    margin: 0 $small_space;
   }
 }
 
