Fixed some sizing issues on components

--- a/src/app/shared/components/inputs/base-input.component.html
+++ b/src/app/shared/components/inputs/base-input.component.html
@@ -3,5 +3,7 @@
     {{ title }}
   </label>
 
-  <ng-content></ng-content>
+  <div class="app-base-input-body">
+    <ng-content></ng-content>
+  </div>
 </div>
