--- a/src/app/shared/components/inputs/text/text-input.component.scss
+++ b/src/app/shared/components/inputs/text/text-input.component.scss
@@ -2,6 +2,7 @@
 @import "sizes";
 
 .app-text-input {
+  width: 100%;
   height: $input-height;
   padding: 0 $extra-extra-small-space;
   border: $medium-border solid $placeholder-border-color;
