Added warn state to button

--- a/src/app/shared/components/button/button.component.scss
+++ b/src/app/shared/components/button/button.component.scss
@@ -22,3 +22,7 @@
 .app-button-secondary {
   background-color: $secondary-button-color;
 }
+
+.app-button-warn {
+  background-color: $warn-button-color;
+}
