--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button class="app-button" [ngClass]="'app-button-' + type" (click)="onClick()">
+<button class="app-button" [ngClass]="'app-button-' + type" (click)="onButtonClick()">
   {{ title }}
 </button>
