--- a/src/assets/styles/sizes.scss
+++ b/src/assets/styles/sizes.scss
@@ -29,6 +29,10 @@ $medium-border: 2px;
 // Font size
 $font-default: 16px;
 $font-large: 1.25rem;
+$font-small: 0.875rem;
 
 // Inputs
 $input-height: 3rem;
+
+// Images
+$medium-image: 8rem;
