Moved map input mock location to OnInit

--- a/src/app/shared/components/inputs/map/map-input.component.html
+++ b/src/app/shared/components/inputs/map/map-input.component.html
@@ -4,6 +4,6 @@
     [useAspectRatio]="true"
     [disableMarkerOnClick]="false"
     (mapClicked)="onValueChange($event)"
-    [locations]="value ? [mockLocation] : []"
+    [locations]="value ? [mockLocation!] : []"
   ></app-map>
 </app-base-input>
